--- a/popup.html
+++ b/popup.html
@@ -4,23 +4,27 @@
   <title>Video Player</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #000;
+      width: 200px;
+      padding: 20px;
+      text-align: center;
     }
-    video {
-      max-width: 100%;
-      max-height: 100%;
+    button {
+      width: 100%;
+      padding: 15px;
+      font-size: 16px;
+      cursor: pointer;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+    button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
-  <video controls autoplay>
-    <source src="mymovie2.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <button id="startButton">Start Video</button>
+  <script src="popup.js"></script>
 </body>
 </html>
